2.ordersystem/k8s/k8s-argocd/argocd-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: argocd-server-ingress
    namespace: argocd
    annotations:
        kubernetes.io/ingress.class: nginx
        cert-manager.io/cluster-issuer: my-issuer
spec:
    tls:
        - hosts:
              - argo.esktest098.store
          secretName: argo-esktest098-com-tls
    rules:
        - host: argo.esktest098.store
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            # 어떠 서비스로 갈거냐?
                            # argocd-server 서비스의 80으로 가겠다는 설정이다.
                            name: argocd-server
                            port:
                                number: 80
